<resources>
    <string name="app_name">ShoeStore</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_existing_account">Log in with an existing account</string>
    <string name="create_a_new_login">Create a new login</string>
    <string name="welcome_text">This is a demo Shoe Store app. This welcome screen and the following instruction screen will show only once until you log out and log in again. Please read carefully to avoid disappointment!</string>
    <string name="welcome">Welcome</string>
    <string name="instructions">Instructions</string>
    <string name="instruction_text">The shoe listing page will show the list of shoes and show a button for adding a new shoe, while the detail page will be for adding a shoe entry.\n\nAll entries will be saved only as long as the app is running.</string>
    <string name="shoe_list">Shoe listing</string>
    <string name="logout">Logout</string>
    <string name="shoe_listing">Shoe listing</string>
    <string name="shoe_detail">Shoe detail</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="company">Company</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="description">Description</string>
    <string name="listitem_shoe_name">Shoe name: %s</string>
    <string name="listitem_company">Company: %s</string>
    <string name="listitem_shoe_size">Size: %.2f</string>
    <string name="listitem_description">Description: %s</string>

</resources>
