<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".instruction.InstructionFragment">

    <data>

        <variable
            name="instructionViewModel"
            type="com.udacity.shoestore.instruction.InstructionViewModel" />
    </data>

    <!-- LinearLayout is used because no complex layout is required -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="@dimen/global_layout_padding">

        <TextView
            style="@style/headline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/default_spacing"
            android:text="@string/instructions" />

        <TextView
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/default_spacing"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/instruction_text"
            android:textAlignment="center" />

        <Button
            android:id="@+id/button_instructions"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/shoe_list"
            android:textColor="@android:color/black"
            app:drawableEndCompat="@drawable/ic_baseline_play_arrow_24" />

    </LinearLayout>
</layout>