<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/default_spacing"
    tools:context=".shoedetail.ShoeDetailFragment">

    <data>

        <variable
            name="shoeDetailViewModel"
            type="com.udacity.shoestore.shoedetail.ShoeDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/shoedetail_constraintlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/default_spacing">

        <TextView
            android:id="@+id/shoename_textview"
            style="@style/subheading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/min_height"
            android:text="@string/shoe_name"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoename_edittext"
            app:layout_constraintEnd_toStartOf="@+id/shoename_edittext"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/company_textview"
            style="@style/subheading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/min_height"
            android:text="@string/company"
            app:layout_constraintBaseline_toBaselineOf="@+id/company_edittext"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/shoesize_textview"
            style="@style/subheading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/min_height"
            android:text="@string/shoe_size"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoesize_edittext"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/description_textview"
            style="@style/subheading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/min_height"
            android:text="@string/description"
            app:layout_constraintBaseline_toBaselineOf="@+id/description_edittext"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/shoename_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="@dimen/min_height"
            app:layout_constraintBottom_toTopOf="@+id/company_edittext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Shoe name" />

        <EditText
            android:id="@+id/description_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="@dimen/min_height"
            app:layout_constraintBottom_toTopOf="@+id/save_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoesize_edittext"
            tools:layout_editor_absoluteX="150dp"
            tools:text="description" />

        <EditText
            android:id="@+id/company_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="@dimen/min_height"
            app:layout_constraintBottom_toTopOf="@+id/shoesize_edittext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoename_edittext"
            tools:text="Company" />

        <EditText
            android:id="@+id/shoesize_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:minHeight="@dimen/min_height"
            app:layout_constraintBottom_toTopOf="@+id/description_edittext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/company_edittext"
            tools:layout_editor_absoluteX="150dp"
            tools:text="7.5" />

        <Button
            android:id="@+id/cancel_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{()->shoeDetailViewModel.onGoShoeList()}"
            android:text="@android:string/cancel"
            android:textColor="@color/button_text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/save_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/save_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textColor="@color/button_text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cancel_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>